--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background: 
        linear-gradient(rgba(23, 73, 38, 0.76) , rgba(23, 73, 38, 0.76) ), 
-       url('Images/farm1.jpg');
+       url('Images/farm1.jpeg');
     background-size:cover;
     background-repeat: no-repeat;
     min-height: 100vh;
