--- a/homestyle.css
+++ b/homestyle.css
@@ -1,11 +1,12 @@
 body{
     background: 
-       linear-gradient(rgba(23, 73, 38, 0.76) , rgba(23, 73, 38, 0.76) ), 
+       linear-gradient(rgba(0, 0, 0, 0.7) , rgba(0, 0, 0, 0.7)), 
        url('Images/farm1.jpeg');
     background-size:cover;
     background-repeat: no-repeat;
     min-height: 100vh;
     background-position: center;
+    color: #f5f5dc;
 }
 
 
@@ -14,7 +15,7 @@ body{
     align-items: center;
     justify-content: space-between;
     padding: 20px 40px;
-    background-color: rgba(4, 48, 20, 0.925);
+    background-color: #1d4032;
 }
 
 .logo {
@@ -30,7 +31,7 @@ body{
 }
 
 .nav-links a{
-    color: gray;
+    color: #f5f5dc ;
     text-decoration: none;
     margin: 0 3px;
     font-size: larger;
@@ -39,7 +40,7 @@ body{
 
 .nav-links :hover{
     
-    color: antiquewhite;
+    color: #db8609;
 }
 
 
@@ -81,3 +82,10 @@ body{
     height: 500%;
 }
 
+footer{
+    background: #794432;
+    color: #f5f5dc;
+    padding: 10px;
+    text-align: center;
+    margin-top: 40px;
+}
