--- a/homestyle.css
+++ b/homestyle.css
@@ -7,6 +7,7 @@ body{
     min-height: 100vh;
     background-position: center;
     color: #f5f5dc;
+    overflow-x: hidden;
 }
 
 
@@ -89,3 +90,6 @@ footer{
     text-align: center;
     margin-top: 40px;
 }
+
+
+
