Update mission, vision, and contact pages

--- a/mvstyle.css
+++ b/mvstyle.css
@@ -11,7 +11,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color:#f5f5dc;
     font-size: xx-large;
     margin: 0;
 }
@@ -25,7 +25,7 @@ body{
 }
 
 .section{
-    background-color: #a1650a;
+    background-color: #f5f5dc;
     padding: 40px;
     border-radius: 10px;
     margin-bottom: 30px;
@@ -39,7 +39,7 @@ body{
 }
 
 .section p{
-    color:#f5f5dc;
+    color:#1D4032;
     font-size: 1.5rem;
     line-height: 1.8;
 }
@@ -55,7 +55,7 @@ body{
 }
 
 .value-box{
-    background-color: #5c2f04;
+    background-color: #388e3c;
     padding: 25px;
     border-radius: 8px;
     text-align: center;
@@ -63,7 +63,7 @@ body{
 }
 
 .value-box h3{
-    color: #388e3c;
+    color: #1D4032;
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
