--- a/productstyle.css
+++ b/productstyle.css
@@ -38,7 +38,7 @@ body{
 }
 
 .product-card{
-    background-color: #a1650a;
+    background-color: #f5f5dc;
     border-radius: 5px;
     padding: 20px;
     text-align: justify;
@@ -57,6 +57,7 @@ body{
 .product-card p{
     font-size: 1.2rem;
     margin-bottom: 10px;
+    color: #1D4032;
 }
 
 .image-wrapper{
